# apilayer-sps

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  spinscribe-infrastructure.yaml  spinscribe-infrastructure.yaml.backup
api/: config.py  database.py  dependencies.py  main.py
api/models/: __init__.py  activity.py  checkpoint.py  client.py  document.py  execution.py  project.py  user.py
api/routers/: auth.py  checkpoints.py  clients.py  documents.py  executions.py  health.py  projects.py  webhooks.py
api/schemas/: __init__.py  auth.py  client.py  document.py  execution.py  project.py  webhook.py
api/services/: cognito.py  crewai.py  s3.py  sse.py
